[gd_scene load_steps=5 format=3 uid="uid://bijr6gpgod2m2"]

[ext_resource type="Theme" uid="uid://ck3lqv73gdnwl" path="res://complete_scenes/ui/ui_theme/main_theme.tres" id="1_udnkd"]
[ext_resource type="Script" uid="uid://djxexfn2ayahf" path="res://complete_scenes/ui/gui.gd" id="1_ypw4e"]
[ext_resource type="PackedScene" uid="uid://cl85lalhxqw5o" path="res://complete_scenes/ui/life.tscn" id="3_n6gs8"]
[ext_resource type="PackedScene" uid="uid://b8feg74hucdu7" path="res://complete_scenes/ui/ammo_scene.tscn" id="4_n6gs8"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_ypw4e")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Турели" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 663.0
offset_top = 936.0
offset_right = 1255.0
offset_bottom = 1067.0
theme = ExtResource("1_udnkd")
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Турели"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control/Турели/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "Лазерная турель	"

[node name="Button2" type="Button" parent="Control/Турели/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "ОбычнаяТурель"

[node name="Жизни" type="Panel" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 365.0
offset_bottom = 89.0
mouse_filter = 1
theme = ExtResource("1_udnkd")
metadata/_edit_group_ = true

[node name="LifeHBoxContainer" type="HBoxContainer" parent="Control/Жизни"]
layout_mode = 1
offset_right = 484.0

[node name="Life5" parent="Control/Жизни/LifeHBoxContainer" instance=ExtResource("3_n6gs8")]
layout_mode = 2

[node name="Life6" parent="Control/Жизни/LifeHBoxContainer" instance=ExtResource("3_n6gs8")]
layout_mode = 2

[node name="Life7" parent="Control/Жизни/LifeHBoxContainer" instance=ExtResource("3_n6gs8")]
layout_mode = 2

[node name="Life8" parent="Control/Жизни/LifeHBoxContainer" instance=ExtResource("3_n6gs8")]
layout_mode = 2

[node name="Life9" parent="Control/Жизни/LifeHBoxContainer" instance=ExtResource("3_n6gs8")]
layout_mode = 2

[node name="Life10" parent="Control/Жизни/LifeHBoxContainer" instance=ExtResource("3_n6gs8")]
layout_mode = 2

[node name="Life11" parent="Control/Жизни/LifeHBoxContainer" instance=ExtResource("3_n6gs8")]
layout_mode = 2

[node name="Life12" parent="Control/Жизни/LifeHBoxContainer" instance=ExtResource("3_n6gs8")]
layout_mode = 2

[node name="Life13" parent="Control/Жизни/LifeHBoxContainer" instance=ExtResource("3_n6gs8")]
layout_mode = 2

[node name="Life14" parent="Control/Жизни/LifeHBoxContainer" instance=ExtResource("3_n6gs8")]
layout_mode = 2

[node name="Life15" parent="Control/Жизни/LifeHBoxContainer" instance=ExtResource("3_n6gs8")]
layout_mode = 2

[node name="Life16" parent="Control/Жизни/LifeHBoxContainer" instance=ExtResource("3_n6gs8")]
layout_mode = 2

[node name="Life17" parent="Control/Жизни/LifeHBoxContainer" instance=ExtResource("3_n6gs8")]
layout_mode = 2

[node name="Life18" parent="Control/Жизни/LifeHBoxContainer" instance=ExtResource("3_n6gs8")]
layout_mode = 2

[node name="Патроны" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = 108.0
offset_right = 365.0
offset_bottom = 191.0
mouse_filter = 1
theme = ExtResource("1_udnkd")
metadata/_edit_group_ = true

[node name="AmmoHBoxContainer" type="HBoxContainer" parent="Control/Патроны"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AmmoScene" parent="Control/Патроны/AmmoHBoxContainer" instance=ExtResource("4_n6gs8")]
layout_mode = 2

[node name="AmmoScene2" parent="Control/Патроны/AmmoHBoxContainer" instance=ExtResource("4_n6gs8")]
layout_mode = 2

[node name="AmmoScene3" parent="Control/Патроны/AmmoHBoxContainer" instance=ExtResource("4_n6gs8")]
layout_mode = 2

[node name="AmmoScene4" parent="Control/Патроны/AmmoHBoxContainer" instance=ExtResource("4_n6gs8")]
layout_mode = 2

[node name="AmmoScene5" parent="Control/Патроны/AmmoHBoxContainer" instance=ExtResource("4_n6gs8")]
layout_mode = 2

[node name="AmmoScene6" parent="Control/Патроны/AmmoHBoxContainer" instance=ExtResource("4_n6gs8")]
layout_mode = 2

[node name="AmmoScene7" parent="Control/Патроны/AmmoHBoxContainer" instance=ExtResource("4_n6gs8")]
layout_mode = 2

[node name="AmmoScene8" parent="Control/Патроны/AmmoHBoxContainer" instance=ExtResource("4_n6gs8")]
layout_mode = 2

[node name="AmmoScene9" parent="Control/Патроны/AmmoHBoxContainer" instance=ExtResource("4_n6gs8")]
layout_mode = 2

[node name="AmmoScene10" parent="Control/Патроны/AmmoHBoxContainer" instance=ExtResource("4_n6gs8")]
layout_mode = 2

[node name="AmmoScene11" parent="Control/Патроны/AmmoHBoxContainer" instance=ExtResource("4_n6gs8")]
layout_mode = 2

[node name="AmmoScene12" parent="Control/Патроны/AmmoHBoxContainer" instance=ExtResource("4_n6gs8")]
layout_mode = 2

[node name="AmmoScene13" parent="Control/Патроны/AmmoHBoxContainer" instance=ExtResource("4_n6gs8")]
layout_mode = 2

[node name="Подсказки по управлению" type="Panel" parent="Control"]
visible = false
layout_mode = 0
offset_left = 22.0
offset_top = 975.0
offset_right = 632.0
offset_bottom = 1058.0
mouse_filter = 1
theme = ExtResource("1_udnkd")
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Подсказки по управлению"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Эмоции" type="Panel" parent="Control"]
visible = false
layout_mode = 0
offset_left = 1279.0
offset_top = 973.0
offset_right = 1889.0
offset_bottom = 1056.0
mouse_filter = 1
theme = ExtResource("1_udnkd")
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Эмоции"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Карта или задания" type="Panel" parent="Control"]
visible = false
layout_mode = 0
offset_left = 660.0
offset_top = 8.0
offset_right = 1914.0
offset_bottom = 162.0
mouse_filter = 1
theme = ExtResource("1_udnkd")
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Карта или задания"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Control/Турели/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Турели/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
